--- a/book/Course files/Example exam/Example Exam.ipynb
+++ b/book/Course files/Example exam/Example Exam.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Example exam\n",
     "\n",
+    "An example of a Python / data-analysis exam.\n",
+    "\n",
     "## Task 1\n",
     "\n",
     "In this task you will show that you understand the basics of Python. \n",
