--- a/book/Course files/Example exam/Example Exam.ipynb
+++ b/book/Course files/Example exam/Example Exam.ipynb
@@ -32,7 +32,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Your code"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,7 +60,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Your code"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,7 +79,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Your code"
+   ]
   }
  ],
  "metadata": {
