--- a/book/Course files/Notebook 8/Notebook 8 Practice.ipynb
+++ b/book/Course files/Notebook 8/Notebook 8 Practice.ipynb
@@ -122,7 +122,7 @@
     "\n",
     "a) Make a function that returns the spectral emissive power as a function of the wavelength $\\lambda$, the star's temperature $T$ and the star's radius $R$\n",
     "\n",
-    "b) Load and use the data given in \"star_data.txt\" to find the temperature and radius of the star\n",
+    "b) Load and use the data given in \"[star_data.txt](./star_data.txt)\" to find the temperature and radius of the star\n",
     "\n",
     "c) Plot the data and the curvefit in two different plots: A plot with a logarithmic x-axis, and a log-log plot."
    ]
