--- a/book/Course files/Notebook 1/Notebook 1 Python Basics.ipynb
+++ b/book/Course files/Notebook 1/Notebook 1 Python Basics.ipynb
@@ -2532,6 +2532,38 @@
    "source": [
     "#"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{exercise} \n",
+    ":name: Ex_1\n",
+    "\n",
+    "Put some code here.\n",
+    "```\n",
+    "\n",
+    "````{solution} Ex_1\n",
+    ":class: dropdown\n",
+    "\n",
+    "```{code} Python\n",
+    "a = 2\n",
+    "b = 3\n",
+    "print(a*b)\n",
+    "```\n",
+    "\n",
+    "```{code} Python\n",
+    "import numpy as np\n",
+    "x = np.linspace(0,1,10)\n",
+    "print(x)\n",
+    "```\n",
+    "````\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
