--- a/book/Course files/Notebook 1/Notebook 1 Python Basics.ipynb
+++ b/book/Course files/Notebook 1/Notebook 1 Python Basics.ipynb
@@ -2561,6 +2561,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "a = 2 \n",
+    "b = 3 \n",
+    "print(a*b)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
