--- a/book/Course files/Notebook 1/Notebook 1 Python Basics.ipynb
+++ b/book/Course files/Notebook 1/Notebook 1 Python Basics.ipynb
@@ -2540,8 +2540,24 @@
     "```{exercise} \n",
     ":name: Ex_1\n",
     "\n",
-    "Put some code here.\n",
+    "Put some code here in the cell below.\n",
     "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Your code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "````{solution} Ex_1\n",
     ":class: dropdown\n",
@@ -2557,7 +2573,7 @@
     "x = np.linspace(0,1,10)\n",
     "print(x)\n",
     "```\n",
-    "````\n"
+    "````"
    ]
   },
   {
