added virtual enviroment explanation

--- a/book/Course files/Good Programming Practices/Good coding practices.ipynb
+++ b/book/Course files/Good Programming Practices/Good coding practices.ipynb
@@ -13,7 +13,8 @@
     "* Student is able to write code that has a clear and understandable structure\n",
     "* Student is able to write code with descriptive variable names\n",
     "* Student is able to write code with explanatory comments\n",
-    "* Student is able to write code that avoids \"hard coding\"\n"
+    "* Student is able to write code that avoids \"hard coding\"\n",
+    "* Student is able to create a virtual enviroment\n"
    ]
   },
   {
@@ -484,16 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-b431872cbd0d20c0",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
+   "metadata": {},
    "source": [
     "As mentioned in the code, this is quite common and probably always a good idea for the for loop: this way, you never accidentally loop over the end of the array! \n",
     "\n",
@@ -508,6 +500,52 @@
     "* Replace hard-coded values with variables\n",
     "* Use functions that can automatically determine the appropriate value to use"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Virtual Environments\n",
+    "\n",
+    "### What is a virtual environment?\n",
+    "A virtual environment is a separate folder in which you have a standalone Python installation with the corresponding packages. If you don’t have a virtual environment (venv), all packages like numpy etc. are installed globally, which creates the risk of conflicts between different packages. For example, it can happen that package x requires `numpy v3.1` but package y requires `numpy v4.5`, so you can’t use both packages. In a venv, all Python packages have their own local versions so you can choose per project which packages you want to use and which versions.\n",
+    "\n",
+    "### 1. Create a new virtual environment\n",
+    "Type the following in your command prompt:\n",
+    "\n",
+    "```python -m venv <name-of-venv>```\n",
+    "\n",
+    "This creates a venv/ folder in your project directory.\n",
+    "\n",
+    "### 2. Activate virtual environment\n",
+    "After creating a virtual environment, it is not automatically activated, you need to activate it separately.\n",
+    "\n",
+    "#### Windows (cmd/PowerShell):\n",
+    "`<name-of-venv>\\Scripts\\activate`\n",
+    "\n",
+    "#### Mac/Linux:\n",
+    "`source <name-of-venv>/bin/activate`\n",
+    "\n",
+    "You now see (<name-of-venv>) in front of your prompt, you are now inside the virtual environment.\n",
+    "\n",
+    "### 3. Install packages\n",
+    "Now you can simply use pip, but the packages will only be installed inside this project:\n",
+    "\n",
+    "`pip install numpy matplotlib`\n",
+    "\n",
+    "### 4. Deactivate virtual environment\n",
+    "Finished?\n",
+    "\n",
+    "`deactivate`\n",
+    "\n",
+    "### Specific for VS Code:\n",
+    "In VS Code go to Command Palette (Ctrl+Shift+P or Cmd+Shift+P on Mac). Type/click on Python: Select Interpreter. Choose the interpreter that refers to your venv (usually something like .<name-of-venv>/bin/python or <name-of-venv>\\Scripts\\python.exe). Now VS Code will automatically use your virtual environment to run scripts and Jupyter notebooks.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
