--- a/book/Course files/Notebook 2/Notebook 2 Functions.ipynb
+++ b/book/Course files/Notebook 2/Notebook 2 Functions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Functions in Python & basics of plotting\n"
+    "# NB2: Functions in Python & basics of plotting\n"
    ]
   },
   {
