--- a/book/Course files/Notebook 5/Notebook 5 Data in Python.ipynb
+++ b/book/Course files/Notebook 5/Notebook 5 Data in Python.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data in Python: Loading, Plotting, and Fitting\n"
+    "# NB5: Data in Python: Loading, Plotting, and Fitting\n"
    ]
   },
   {
