--- a/book/Course files/Notebook 1/NB1_ex_sol.ipynb
+++ b/book/Course files/Notebook 1/NB1_ex_sol.ipynb
@@ -83,7 +83,7 @@
    "metadata": {},
    "source": [
     "**Exercise 1.4**\n",
-    "# After restarting the kernel all variables, such as a, are no longer stored and do not show up in %whos.\n"
+    "After restarting the kernel all variables, such as a, are no longer stored and do not show up in %whos.\n"
    ]
   },
   {
@@ -148,7 +148,7 @@
    "metadata": {},
    "source": [
     "**Exercise 1.7**\n",
-    "# \n"
+    "- \n"
    ]
   },
   {
@@ -207,7 +207,7 @@
    "metadata": {},
    "source": [
     "**Exercise 1.10**\n",
-    "#\n"
+    "-"
    ]
   },
   {
@@ -259,7 +259,7 @@
    "metadata": {},
    "source": [
     "**Exercise 1.13**\n",
-    "#\n"
+    "-\n"
    ]
   },
   {
@@ -268,14 +268,14 @@
    "metadata": {},
    "source": [
     "**Exercise 1.14**\n",
-    "# ZeroDivisionError: division by zero\n",
-    "# You cannot divide by zero, so this results in an error.\n",
+    "ZeroDivisionError: division by zero\n",
+    "You cannot divide by zero, so this results in an error.\n",
     "\n",
-    "# NameError: name 'practicum' is not defined\n",
-    "# You cannot use an undefined variable, use a string to print text.\n",
+    "NameError: name 'practicum' is not defined\n",
+    "You cannot use an undefined variable, use a string to print text.\n",
     "\n",
-    "# TypeError: can only concatenate str (not \"int\") to str\n",
-    "# You cannot add a string and an integer. We can add two strings: \n"
+    "TypeError: can only concatenate str (not \"int\") to str\n",
+    "You cannot add a string and an integer. We can add two strings: \n"
    ]
   },
   {
@@ -294,7 +294,7 @@
    "metadata": {},
    "source": [
     "**Exercise 1.15**\n",
-    "#\n"
+    "-\n"
    ]
   },
   {
@@ -303,7 +303,7 @@
    "metadata": {},
    "source": [
     "**Exercise 1.13**\n",
-    "#\n"
+    "-\n"
    ]
   }
  ],
