--- a/book/Course files/Notebook 1/NB1_ex_sol.ipynb
+++ b/book/Course files/Notebook 1/NB1_ex_sol.ipynb
@@ -148,7 +148,7 @@
    "metadata": {},
    "source": [
     "**Exercise 1.7**\n",
-    "- \n"
+    " \n"
    ]
   },
   {
@@ -206,8 +206,7 @@
    "id": "fc6578ab",
    "metadata": {},
    "source": [
-    "**Exercise 1.10**\n",
-    "-"
+    "**Exercise 1.10**\n"
    ]
   },
   {
@@ -258,8 +257,7 @@
    "id": "9764d238",
    "metadata": {},
    "source": [
-    "**Exercise 1.13**\n",
-    "-\n"
+    "**Exercise 1.13**\n"
    ]
   },
   {
@@ -294,7 +292,7 @@
    "metadata": {},
    "source": [
     "**Exercise 1.15**\n",
-    "-\n"
+    "\n"
    ]
   },
   {
@@ -302,8 +300,7 @@
    "id": "9f5f0116",
    "metadata": {},
    "source": [
-    "**Exercise 1.13**\n",
-    "-\n"
+    "**Exercise 1.13**\n"
    ]
   }
  ],
