--- a/book/Course files/Notebook 3/Notebook 3 Program Flow Control.ipynb
+++ b/book/Course files/Notebook 3/Notebook 3 Program Flow Control.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NB3: Program flow control with Conditional Statements and Loops"
+    "# Program flow control with Conditional Statements and Loops"
    ]
   },
   {
