--- a/book/Course files/Notebook 4/Notebook 4 Scientific Computing.ipynb
+++ b/book/Course files/Notebook 4/Notebook 4 Scientific Computing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NB4: Scientific Computing in Python with Numpy\n"
+    "# Scientific Computing in Python with Numpy\n"
    ]
   },
   {
