--- a/book/Course files/Notebook 6/NB6_ex.ipynb
+++ b/book/Course files/Notebook 6/NB6_ex.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d0877abf",
+   "metadata": {},
+   "source": [
+    "# Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "16be87b2",
    "metadata": {},
    "source": [
@@ -386,24 +394,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "908ad96e",
-   "metadata": {},
-   "source": [
-    "<div style=\"width:65%; margin:0 auto;\">\n",
-    "    <iframe width=\"400\" height=\"300\" src=\"https://www.youtube.com/embed/cXcfwthH1SE\" title=\"college 1 deel 3\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "729e5bdb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "beb7785e",
    "metadata": {},
    "source": [
@@ -641,26 +631,6 @@
     "\n",
     "**Functional:** $u(Z) = \\sqrt{(\\frac{Z(A+u(A)) - Z(A-u(A))}{2})^2 + (\\frac{Z(B+u(B)) - Z(B-u(B))}{2})^2}$\n",
     "**Calculus:** $u(Z) = \\sqrt{(\\frac{\\partial Z}{\\partial A} u(A))^2 + (\\frac{\\partial Z}{\\partial B} u(B))^2}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e8cc1012",
-   "metadata": {},
-   "source": [
-    "<div style=\"width:65%; margin:0 auto;\">\n",
-    "    <iframe width=\"400\" height=\"300\" src=\"https://www.youtube.com/embed/Qbwikf7TqqI\" title=\"college 2 deel 1\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4480ffbf",
-   "metadata": {},
-   "source": [
-    "<div style=\"width:65%; margin:0 auto;\">\n",
-    "    <iframe width=\"400\" height=\"300\" src=\"https://www.youtube.com/embed/Lb6lhWIxqhg\" title=\"college 2 deel 2\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>\n",
-    "</div>"
    ]
   },
   {
