incl tudelft theme

--- a/book/Course files/Notebook 6/NB6_ex.ipynb
+++ b/book/Course files/Notebook 6/NB6_ex.ipynb
@@ -5,7 +5,8 @@
    "id": "d0877abf",
    "metadata": {},
    "source": [
-    "# Exercises"
+    "# Exercises\n",
+    "\n"
    ]
   },
   {
@@ -13,6 +14,8 @@
    "id": "16be87b2",
    "metadata": {},
    "source": [
+    "## Repeated readings and measurement uncertainty\n",
+    "\n",
     "**`Exercise 6.1`** \\\n",
     "The results of eight titrated volumes (in ml) are: 25.8, 26.2, 26.0, 26.5, 25.8, 26.1, 25.8 and 26.3. \n",
     "\n",
