--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -8,6 +8,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(2+3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
