--- a/book/Course files/Notebook 5/Notebook 5 Data in Python.ipynb
+++ b/book/Course files/Notebook 5/Notebook 5 Data in Python.ipynb
@@ -17,7 +17,7 @@
     "* post-test: test your skills after Notebook 5. Check whether you learned enough.\n",
     "\n",
     "**Doing an analysis**\n",
-    "Eric so far survived the first weeks of his employment. As he showed some true skills, he is asked to help in building an RC-filter. First, some initial data needs to be analysed. He receives a datafile called [pretestdata.csv](https://github.com/Contemporary-Physicslab/FYPLC/blob/main/book/Course%20files/Notebook%205/pretestdataset.csv). Once he retrieved (loaded) this data, he plots it first. He then uses the theoretical formula that should describe the pattern in the data: $\\frac{U_C}{U_{max}}=\\frac{1}{\\sqrt{1+(wRC)^2}}$, where $w$ is the angular frequency given by $w=2\\pi f$. $RC$ can be considered a constant which can be found using least-square fitting.\n",
+    "Eric so far survived the first weeks of his employment. As he showed some true skills, he is asked to help in building an RC-filter. First, some initial data needs to be analysed. He receives a datafile called [pretestdata.csv](https://github.com/Contemporary-Physicslab/FYPLC/blob/main/book/Course%20files/Notebook%205/pretestdata.csv). Once he retrieved (loaded) this data, he plots it first. He then uses the theoretical formula that should describe the pattern in the data: $\\frac{U_C}{U_{max}}=\\frac{1}{\\sqrt{1+(wRC)^2}}$, where $w$ is the angular frequency given by $w=2\\pi f$. $RC$ can be considered a constant which can be found using least-square fitting.\n",
     "- Retrieve the data and plot these using a log-scale on the x-axis. Think about the scientific rules for making plots.\n",
     "- Find the best estimate of RC and plot the fitfunction on top of the dataset.\n",
     "- Carry out a residual analysis."
