--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -8,15 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(2+3)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -121,17 +112,36 @@
    "source": [
     "## Introduction\n",
     "\n",
+    "In physics experiments, you try to record relationships or certain values as accurately as possible. What exactly “as accurately as possible” means remains unclear for now. What is hopefully clear right away is that we can almost never determine those values directly. We conduct various experiments to collect data that we can use to determine the relationship and then establish the various parameters in that relationship as accurately as possible. \n",
+    "\n",
+    "However, it is never possible to determine the exact value(s) of those parameters: with each new measurement, there will be small fluctuations (especially if you measure very precisely). Over time, we have been able to improve our experiments and take more measurements in less time. This means that, over the course of history, constants such as Planck's constant have been determined with increasing accuracy and that the value has varied over the years.\n",
+    "\n",
+    "The consequence of never being able to determine a value precisely is that when you work with that value, your final answer will never be perfect (determined). There will always be uncertainty about what the exact value actually is. In this chapter, you will learn how the uncertainty in a measured value affects the final answer (you already know the basics, significant figures and associated calculation rules), and how to minimize that uncertainty.\n",
+    "\n",
+    "<!-- \n",
     "In natuurkundige experimenten probeer je verbanden of bepaalde waarden zo goed mogelijk vast te leggen. Wat zo goed mogelijk dan precies inhoudt, blijft nu nog even onduidelijk. Wat hopelijk wel meteen duidelijk is, is dat we die waarden vrijwel nooit direct vast kunnen stellen. We voeren verschillende experimenten uit om data te verzamelen waarmee we het verband kunnen bepalen en vervolgens zo goed mogelijk de verschillende parameters in dat verband vast te stellen. \n",
     "\n",
     "Het lukt echter nooit om de exacte waarde(n) van die parameter(s) vast te stellen: bij elke nieuwe meting zullen er kleine fluctuaties zijn (zeker als je heel precies meet). In de loop der tijd hebben we onze experimenten kunnen verbeteren, en kunnen we in kortere tijd meer metingen doen. Dit zorgt er dan ook voor dat in de loop van de geschiedenis constanten, zoals de constante van Planck, steeds beter bepaald zijn en dat de waarde in de loop der jaren verschilt.\n",
     "\n",
-    "Het gevolg van het nooit precies kunnen vast stellen van een waarde is dat als je gaat werken met die waarde je eindantwoord ook nooit perfect (gedetermineerd) is. Er zal altijd een onzekerheid zijn wat de precieze waarde daadwerkelijk is. In dit hoofdstuk leer je hoe de onzekerheid in een gemeten waarde doorwerkt in het eindantwoord (de basis, significante cijfers en bijbehorende rekenregels, ken je al), en hoe je die onzekerheid zo klein mogelijk maakt.\n",
+    "Het gevolg van het nooit precies kunnen vast stellen van een waarde is dat als je gaat werken met die waarde je eindantwoord ook nooit perfect (gedetermineerd) is. Er zal altijd een onzekerheid zijn wat de precieze waarde daadwerkelijk is. In dit hoofdstuk leer je hoe de onzekerheid in een gemeten waarde doorwerkt in het eindantwoord (de basis, significante cijfers en bijbehorende rekenregels, ken je al), en hoe je die onzekerheid zo klein mogelijk maakt. -->\n",
     "\n",
     "```{note}\n",
-    "De woorden meetfout en meetonzekerheid lopen vaak door elkaar heen. In veel gevallen zou meetonzekerheid preciezer beschrijven wat er bedoeld wordt. Een meetfout impliceert dat je iets echt *fout* doet, zonder dat je daar iets aan kunt doen. De fout komt inherent voort uit het gebruik van een instrument, van het meten zelf. In dat geval zou het dus netter zijn om te praten over de onzekerheid. Alhoewel we hier heel zorgvuldig proberen het onderscheid te maken, gebeurt het in het algemeen taalgebruik dat de twee termen onbedoeld verwisseld worden. \n",
+    "The terms measurement error and measurement uncertainty are often used interchangeably. In many cases, measurement uncertainty would be a more accurate description of what is meant. A measurement error implies that you are doing something truly *wrong*, without being able to do anything about it. The error arises inherently from the use of an instrument, from the measurement itself. In that case, it would be more accurate to talk about uncertainty. Although we try to make a careful distinction here, in general language use the two terms are often unintentionally interchanged. \n",
+    "\n",
+    "<!-- De woorden meetfout en meetonzekerheid lopen vaak door elkaar heen. In veel gevallen zou meetonzekerheid preciezer beschrijven wat er bedoeld wordt. Een meetfout impliceert dat je iets echt *fout* doet, zonder dat je daar iets aan kunt doen. De fout komt inherent voort uit het gebruik van een instrument, van het meten zelf. In dat geval zou het dus netter zijn om te praten over de onzekerheid. Alhoewel we hier heel zorgvuldig proberen het onderscheid te maken, gebeurt het in het algemeen taalgebruik dat de twee termen onbedoeld verwisseld worden.  -->\n",
     "```\n",
     "\n",
     "## Goal\n",
+    "\n",
+    "A complete data analysis will often consist of the following three phases:\n",
+    "\n",
+    "1.  determining the reliability of individual measurements and the dataset as a whole;\n",
+    "2.  finding and determining the pattern in the data, including determining the variables with their associated uncertainties;\n",
+    "3.  an optimal data (re)presentation to convince of phases 1 & 2.\n",
+    "\n",
+    "The aim of this part of the physics practical is to develop a deeper understanding of the above phases and to learn how to apply the associated techniques.\n",
+    "\n",
+    "<!-- \n",
     "\n",
     "Een volledige data-analyse zal vaak bestaan uit de volgende drie fasen:\n",
     "\n",
@@ -139,21 +149,26 @@
     "2.  het vinden en bepalen van het patroon in de data met daarbij de bepaling van de variabelen met hun bijbehorende onzekerheden;\n",
     "3.  een optimale data(re)presentatie om te overtuigen van fasen 1 & 2.\n",
     "\n",
-    "Het doel van dit onderdeel van het natuurkundig practicum is elk het ontwikkelen van een dieper begrip van de bovenstaande fasen en het leren toepassen van de bijbehorende technieken.\n",
+    "Het doel van dit onderdeel van het natuurkundig practicum is elk het ontwikkelen van een dieper begrip van de bovenstaande fasen en het leren toepassen van de bijbehorende technieken. -->\n",
     "\n",
     "## Quantities, units, dimension-analysis and constants\n",
     "\n",
-    "In de natuurkunde meten we fysische grootheden. We onderscheiden vectoren (grootheden met een richting $\\vec{F}$ (N)) en scalairen (grootheden met alleen een waarde ($m$ (kg)). De grootheid wordt schuingedrukt ($U$), bijbehorende eenheid rechtop (V).\n",
+    "In physics, we measure physical quantities. We distinguish between vectors (quantities with a direction $\\vec{F}$ (N)) and scalars (quantities with only a value ($m (\\mathrm{kg})$). The quantity is written in italics ($U$), with the corresponding unit in upright type (V).\n",
     "\n",
-    "Er zijn vijf veel gebruikte standaardeenheden (kg, m, s, K, C). Er is ook nog een zesde standaardeenheid die je minder vaak tegen komt (cd). Alle andere eenheden zijn afgeleid van deze standaardeenheden. De afleiding van de eenheid gebeurt op basis van de formule:\n",
+    "There are five commonly used standard units (kg, m, s, K, C). There is also a sixth standard unit that you encounter less often (cd). All other units are derived from these standard units. The derivation of the unit is based on the formula:\n",
     "\n",
-    "```{admonition} Voorbeeld: Afleiding van J/s\n",
+    "<!-- In de natuurkunde meten we fysische grootheden. We onderscheiden vectoren (grootheden met een richting $\\vec{F}$ (N)) en scalairen (grootheden met alleen een waarde ($m$ (kg)). De grootheid wordt schuingedrukt ($U$), bijbehorende eenheid rechtop (V).\n",
+    "\n",
+    "Er zijn vijf veel gebruikte standaardeenheden (kg, m, s, K, C). Er is ook nog een zesde standaardeenheid die je minder vaak tegen komt (cd). Alle andere eenheden zijn afgeleid van deze standaardeenheden. De afleiding van de eenheid gebeurt op basis van de formule: -->\n",
+    "\n",
+    "```{admonition} Example: Derivation of J/s\n",
     ":class: dropdown, tip\n",
     "$P = F\\cdot v$\\\n",
     "[J/s] = [kg m s$^{-2}$] $\\cdot$ [m s$^{-1}$] = [kg m$^{2}$ s$^{-3}$]\n",
     "```\n",
     "\n",
-    "Op een zelfde wijze, op basis van eenheden (dimensie-analyse), kun je formules afleiden als je weet welke grootheden mogelijk een rol spelen. Bij het tweedejaarsvak Fysische Transportverschijnselen zal daar veel dieper op ingegaan worden. Wil je weten hoe je een dimensie-analyse uitvoert? Kijk dan eens dit filmpje:\n",
+    "<!-- Op een zelfde wijze, op basis van eenheden (dimensie-analyse), kun je formules afleiden als je weet welke grootheden mogelijk een rol spelen. Bij het tweedejaarsvak Fysische Transportverschijnselen zal daar veel dieper op ingegaan worden. Wil je weten hoe je een dimensie-analyse uitvoert? Kijk dan eens dit filmpje: -->\n",
+    "In the same way, based on units (dimensional analysis), you can derive formulas if you know which quantities may play a role. This will be discussed in much greater depth in the second-year course Physical Transport Phenomena. Would you like to know how to perform a dimensional analysis? Then take a look at this video:\n",
     "\n",
     "<div style=\"display: flex; justify-content: center;\">\n",
     "    <div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
@@ -167,7 +182,9 @@
     "    </div>\n",
     "</div>\n",
     "\n",
-    "Bij veel experimenten waarin je een verband bepaalt, maak je gebruik van een constante, bijvoorbeeld de constante van Planck. [CODATA](https://codata.org/blog/2015/08/04/codata-recommended-values-of-the-fundamental-physical-constants-2014/) heeft een mooi lijstje gemaakt van die constanten met hun bijbehorende (relatieve) onzekerheid. Maak gebruik van deze referentie bij het opzoeken en gebruik van natuurkundige constanten.\n",
+    "In many experiments in which you determine a relationship, you use a constant, such as Planck's constant. [CODATA](https://codata.org/blog/2015/08/04/codata-recommended-values-of-the-fundamental-physical-constants-2014/) has compiled a useful list of these constants with their corresponding (relative) uncertainty. Use this reference when looking up and using physical constants.\n",
+    "\n",
+    "<!-- Bij veel experimenten waarin je een verband bepaalt, maak je gebruik van een constante, bijvoorbeeld de constante van Planck. [CODATA](https://codata.org/blog/2015/08/04/codata-recommended-values-of-the-fundamental-physical-constants-2014/) heeft een mooi lijstje gemaakt van die constanten met hun bijbehorende (relatieve) onzekerheid. Maak gebruik van deze referentie bij het opzoeken en gebruik van natuurkundige constanten. -->\n",
     "\n",
     "```{exercise}\n",
     ":label: ex-eenh\n",
